# tcc_sentiment-analysis-ecommerce

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
1_coleta/: README.md  database.py  logger_config.py  main.py  resume.py  robots.txt  scraping.py  scraping_test.py  sitemap.py
2_analise/: README.md  main.py  mongo_handler.py  sentiment_analysis_model.py  statistics.py
2_analise/fine-tuning/: avaliacoes_kabum.csv  avaliacoes_kabum_sentimento.csv  extract.py  fine_tuning.ipynb  fine_tuning.py  test_model.py
3_backend/: README.md  main.py
3_backend/core/: config.py  database.py  security.py
3_backend/models/: navegacao_model.py  pagination_model.py  produto_model.py
3_backend/routers/: produto_router.py
3_backend/services/: produto_service.py
3_backend/utils/: localizacao_utils.py
4_frontend/sentiment-analysis-frontend/: README.md  next.config.ts  package-lock.json  package.json
4_frontend/sentiment-analysis-frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
4_frontend/sentiment-analysis-frontend/src/app/actions/: navigation.ts  produto.ts  produtos.ts  produtosBusca.ts
4_frontend/sentiment-analysis-frontend/src/app/busca/: page.tsx
4_frontend/sentiment-analysis-frontend/src/app/sobre/: page.tsx
4_frontend/sentiment-analysis-frontend/src/components/categoryMenu/: index.tsx  teste.tsx
4_frontend/sentiment-analysis-frontend/src/components/header/: index.tsx
4_frontend/sentiment-analysis-frontend/src/types/: produtos.ts
(+11 files in other folders)
